[package]
name = "controller"
homepage.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
